styles.css
*, *::after, *::before {
    box-sizing: border-box;
    margin: 0;
    padding: 0;
}

:root {
/* primary */
    --very-dark-magenta: hsl(300, 43%, 22%);
    --soft-pink: hsl(333, 80%, 67%);

/* neutral */
    --dark-grayish-magenta: hsl(303, 10%, 53%);
    --light-grayish-magenta: hsl(300, 24%, 96%);
    --white: hsl(0, 0%, 100%);
}

body {
    font-family: "League Spartan", sans-serif;
    background-image: url(./images/bg-pattern-top-mobile.svg),
        url(./images/bg-pattern-bottom-mobile.svg);
    background-repeat: no-repeat;
    background-position: left top, right bottom;
    background-size: 100%;
    min-height: 100vh;
}

.social-proof {
    margin: 0 1.5em;
}

.social-proof__description h1 {
    font-size: 2.5em;
    color: var(--very-dark-magenta);
    margin: 2.2em 1em 0.5em;
    text-align: center;
    letter-spacing: -0.03em;
    line-height: 0.8em;
}

.social-proof__description p {
    font-size: 1.2em;
    font-weight: 500;
    color: var(--dark-grayish-magenta);
    margin-bottom: 2em;
    line-height: 1.3em;
    text-align: center;
}

.social-proof__ratings article {
    text-align: center;
    background-color: var(--light-grayish-magenta);
    margin: 1em 0;
    padding: 1em;
    border-radius: 10px;
}

.social-proof__ratings article p {
    margin-top: 0.7em;
    color: var(--very-dark-magenta);
    font-weight: 700;
    font-size: 1.1em;
}

.social-proof__testimonials {
    margin: 3em 0;
}

.social-proof__testimonials article {
    background-color: var(--very-dark-magenta);
    margin-top: 1em;
    padding: 2.5em 2.5em 2em 2em; 
    border-radius: 10px;
}

.social-proof__testimonials article header {
    display: flex;
    gap: 1em;
    align-items: center;
}

.buyer-picture {
    width: 3em;
    border-radius: 100%;
}

.buyer-name {
    color: var(--white);
    font-weight: 700;
    margin-bottom: 0.5em;
}

.verified-buyer {
    color: var(--soft-pink);
}

.quote {
    color: var(--white);
    margin-top: 1.5em;
    line-height: 1.5em;
}

.quote::before {
    content: '“';
}

.quote::after {
    content: '”';
}

.attribution {
    font-size: 0.8em;
    text-align: center;
}

.attribution a {
    color: hsl(228, 45%, 44%);
}

@media only screen and (min-width: 400px) {
    body {
        background-image: url(./images/bg-pattern-top-desktop.svg),
            url(./images/bg-pattern-bottom-desktop.svg);
        background-repeat: no-repeat;
        background-position: left top, right bottom;
    }
}

@media only screen and (min-width: 650px) {
    .social-proof__description h1 {
        max-width: 450px;
        margin: 2.2em auto 0.5em;
    }

    .social-proof__description p {
        max-width: 700px;
        margin: 2em auto;
    }

    .social-proof__ratings {
        display: flex;
        flex-direction: column;
        max-width: 500px;
        margin: 0 auto;
    }

    .social-proof__ratings article {
        width: 400px;
        display: flex;
        margin: 0.5em;
    }

    .social-proof__ratings article p {
        margin: 0.2em 0 0 1em;
    }
    
    .social-proof__ratings article:nth-child(2) {
        align-self: center;
    }

    .social-proof__ratings article:nth-child(3) {
        align-self: flex-end;
    }

    .social-proof__testimonials {
        display: flex;
        gap: 10px;
    }

    .social-proof__testimonials article {
        padding-right: 2em;
        flex: 1;
    }
}

@media only screen and (min-width: 900px) {
    body {
        padding: 0 5em;
        background-size: 45%, 80%;
    }

    .social-proof {
        display: grid;
        grid-template-columns: repeat(2, 1fr);
        grid-template-rows: repeat(2, auto);
        gap: 50px;
        margin: 5em auto;
        max-width: 1200px;
    }

    .social-proof__description,
    .social-proof__ratings {
        align-self: center;        
    }

    .social-proof__description h1,
    .social-proof__description p {
        text-align: left;
    }

    .social-proof__description h1 {
        margin: 0;
        max-width: 300px;
    }

    .social-proof__description p {
        margin: 2em 0 0 0;
        max-width: 400px;
    }

    .social-proof__ratings {
        align-self: center;
        width: 100%;
    }

    .social-proof__testimonials {
        grid-column: span 2;
        margin: 0;
        height: 100%;
        gap: 20px;
    }

    .social-proof__testimonials article {
        margin: 0;
        flex: 1;
        padding-right: 1.5em;
        min-height: 20em;
    }

    .social-proof__testimonials article:nth-child(1) {
        align-self: flex-start;
    }

    .social-proof__testimonials article:nth-child(2) {
        align-self: flex-start;
        margin-top: 2em;
    }

    .social-proof__testimonials article:nth-child(3) {
        align-self: flex-start;
        margin-top: 4em;
    }
}

@media only screen and (min-width: 1000px) {
    .social-proof__testimonials article {
        min-height: 18em;
    }
}

@media only screen and (min-width: 1200px) {
    .social-proof__description p {
        max-width: 600px;
    }

    .social-proof__testimonials article {
        min-height: unset;
    }
}

